feat: Update use_code in metadata and DCR
fixes gravitee-io/issues#7152